--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
       Kaltara: { in: 9009, out: 9909 }
     };
 
-    const ws = new WebSocket(`ws://${location.host}`);
+    const ws = new WebSocket(`${location.protocol === 'https:' ? 'wss' : 'ws'}://${location.host}`);
     let ipAddr = '';
     const container = document.getElementById('container');
     const started = {};
