--- a/public/index.html
+++ b/public/index.html
@@ -104,6 +104,7 @@
 
       if (data.type === 'ip') {
         ipAddr = data.ip;
+        console.log(ipAddr);
         renderUI();
         return;
       }
